Opened 15 years ago

Closed 15 years ago

#4784 closed bug (fixed)

abort() does not work correctly

Reported by: axeld Owned by: axeld
Priority: high Milestone: R1
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Although its implementation doesn't look that wrong, abort() does only exit the current thread, not the team.

I've added a test application under src/tests/system/libroot/posix/abort_test.cpp that reproduces the problem.

I originally noticed this bug as part of the problem described in #4778.

Change History (2)

comment:1 by axeld, 15 years ago

Priority: normalhigh

comment:2 by axeld, 15 years ago

Component: System/libroot.soSystem/Kernel
Resolution: fixed
Status: newclosed

Fixed in hrev33599.

Note: See TracTickets for help on using tickets.