* Moved SIGABRT to the signals that kill the process. Not sure if it's a good   idea to always send SIGKILL to the main thread, though. I'm not really getting   more insight by reading the POSIX specs. * Anyway, in the mean time, this fixes bug #4784.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@33599 a95241bf-73f2-0310-859d-f6bbb57e9c96